changed labed and basic insert op

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FileExplorer",
+  "name": "EMS",
   "description": "Simple file explorer.",
   "version": "0.1.1",
   "main": "index.html",
